# Hermes-Optimizer

./: .gitignore  .prettierignore  PROJETO_OBJETIVO.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.tauri.config.ts
.lovable/: plan.md
docs/: BOTAO1_PREPARAR_PC_REAL.md  BOTAO2_OTIMIZAR_TUDO_REAL.md  analise-igust-windows-boost.md  analise-p3ninha-baseline-antes.txt  analise-p3ninha-final-modo-jogo.txt  analise-p3ninha-monitor-durante.txt  analise-p3ninha-observacoes.md  analise-p3ninha-pos-reinicio.txt  build-assinado-windows.md  futuro-hermes-auth.md  futuro-ligahub-auth.md  licenciamento-release-0.1.0.md  prompt-hermes-ai-optimizer-v1-analise.md  qa-manual-maquina-limpa-2026-06-24.md  relatorio-interno-release-0.1.0.md  release-go-no-go-0.1.0.md  release-policy.json  release-qa-checklist.md  roadmap-funcional.md  roadmap-mestre-hermes-30-dias.md
scripts/: align-manual-qa-to-current-rc.ps1  audit-gamer-dependency-manifest.mjs  build-signed-windows.ps1  build-windows-controlled.ps1  check-manual-qa-package.ps1  (+52 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: advanced.rs  advisor.rs  advisor_ai_engine.rs  anti_cheat.rs  benchmark.rs  clean.rs  diagnostic.rs  gamer.rs  gamer_dependencies.rs  lib.rs  main.rs  optimizer.rs  performance.rs  profiles.rs  restore.rs  safe_mode.rs  startup.rs  system.rs
src-tauri/src/commands/: benchmark.rs  cleaner.rs  diagnostics.rs  history.rs  logs.rs  mod.rs  power.rs  restore.rs  startup.rs  tweaks.rs
(+104 files in other folders)
