[package]
name = "hermes-optimizer"
version = "0.1.0"
description = "Hermes Optimizer"
authors = ["Hermes Optimizer Team"]
edition = "2021"

[lib]
name = "hermes_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
